--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "typescript": "5.6.3"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "4.21.1",
+    "mongodb": "^6.10.0",
     "tsconfig-paths": "^4.2.0"
   }
 }
