--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
+    "envalid": "^8.0.0",
     "express": "4.21.1",
     "mongodb": "^6.10.0",
     "tsconfig-paths": "^4.2.0"
